src/test/ui/proc-macro/load-panic.stderr
error: proc-macro derive panicked
  --> $DIR/load-panic.rs:6:10
   |
LL | #[derive(Panic)]
   |          ^^^^^
   |
   = help: message: panic-derive

error: aborting due to previous error

